# FRYND

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/chroma_meal_db/: chroma.sqlite3
faq/after_data/: airbusan.json  airpremia.json  jeju.json  jinair.json  tway.json
faq/before/: airbusan.txt  airpremia.txt  jeju.txt  jinair.txt  tway.txt
modules/: __init__.py  agent.py  amadeus.py  chat_ui.py  constants.py  faq.py  faq_ui.py  meal_chat_ui.py  meal_rag.py
notebook/: chatbot_meal.ipynb  web_scraping_meal.ipynb
