[project]
name = "frynd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.31.0",
    "amadeus>=9.3.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.2.3",
    "langchain-google-genai>=1.0.5",
    "google-generativeai>=0.5.3",
    "pydantic>=2.6.0",
]
